@@ -1,3 +1,10 @@
+2007-06-11  Benjamin Reed  <rangerrick@users.sourceforge.net>
+
+	* Services.pm: fall back to checking the gcc symlink if
+	gcc_select is not there
+	* VirtPackage.pm: give a warning when they have an incomplete
+	X11 install
+
 2007-06-06  Daniel Macks  <dmacks@netspace.org>
 
 	* Validation.pm: Accept .dylib whose install_name isn't absolute
